tracing/java/grpc-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  namespace: grpc-tracing
  name: tracing-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 7777
        name: grpc
        protocol: GRPC
      hosts:
        - "*"
